fix layout issues, logo

--- a/website/src/css/docs-pages.css
+++ b/website/src/css/docs-pages.css
@@ -1,10 +1,13 @@
 :root.docs-doc-page {
     --doc-sidebar-width: 300px;
+    --ifm-font-family-monospace: 'Port Lligat Sans';
     --ifm-heading-color: var(--vuu-light-text-primary);
     --ifm-link-color: var(--vuu-light-text-primary);;
     --vuu-footer-display: none;
     --vuu-navbar-height: 125px;
-    --vuu-navbar-padding: 0px;
+    --vuu-navbar-logo-height: 61px;
+    --vuu-navbar-logo-width: 140px;
+    --vuu-navbar-padding: 32px;
   }
   
   .docs-doc-page #__docusaurus {
@@ -31,10 +34,35 @@
     position: relative;
   }
   
+.menu.thin-scrollbar {
+  padding: 0;
+}
+
   .menu__link--active {
     font-weight: 700;
   }
   
+  .menu__list-item {
+    padding-right: 30px;
+    position: relative;
+  }
+
+  .menu__list-item--collapsed:hover {
+    background-color: #eaebf0;
+  }
+
+  .menu__list-item--collapsed:hover:before {
+    content: '';
+    background-color: var(--vuu-accent1);
+    position: absolute;
+    height: 37px;
+    top:0;
+    left: var(--vuu-menu-indent,0);
+    width: 4px;
+  }
+
+
+
   .menu__list-item--collapsed .menu__caret:before {
     transform: none;
   }
@@ -81,7 +109,7 @@
   }
   
   :root.docs-doc-page main {
-    padding: 0 32px;
+    padding: 0 32px 0 75px;
   }
 
 .markdown {
@@ -167,3 +195,29 @@
     content: none!important;
   }
 
+.table-of-contents {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 25px;
+}
+
+.table-of-contents__link:hover {
+  color: inherit;
+}
+
+.table-of-contents__link--active {
+  color: inherit;
+  font-weight: 700;
+}
+
+.theme-code-block {
+  --prism-background-color: var(--vuu-dark-bg-background2) !important;
+}
+
+.token-line {
+  color: rgba(255,255,255, .8) !important;
+}
+
+.token-line .token.function {
+  color: var(--vuu-accent1) !important;
+}
